--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Batnaidan.github.io/web-programming-lab-5",
+  "homepage": "https://batnaidan.github.io/web-programming-lab-5",
   "name": "web-programming-lab-5",
   "version": "0.1.0",
   "private": true,
